# optimized-dockerfiles

./: README.md
.github/workflows/: react.yaml
fastapi/: .dockerignore  Dockerfile  Dockerfile.basic  pyproject.toml
fastapi/src/fastapi_demo/: main.py
fastapi/src/fastapi_demo/api/: routes.py
fastapi/src/fastapi_demo/core/: config.py
nextjs/: Dockerfile
react/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
react/nginx-config/: app.conf
react/src/: App.css  App.jsx  index.css
react/src/pages/: Courses.jsx  Home.jsx  Profile.jsx
